# thirtyparth

./: CMakeLists.txt  README.md
gflags-2.2.2/: CMakeLists.txt
gflags-2.2.2/lib/pkgconfig/: gflags.pc
gflags-2.2.2/test/: CMakeLists.txt  gflags_declare_test.cc
googletest-1.10.0/: CMakeLists.txt
googletest-1.10.0/lib64/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
googletest-1.10.0/samples/: CMakeLists.txt
nlohmannjson-3.9.1/: CMakeLists.txt
nlohmannjson-3.9.1/test/: CMakeLists.txt  config.h.in
nlohmannjson-3.9.1/test/test01/: main.cpp
nlohmannjson-3.9.1/test/test02/: main.cpp
nlohmannjson-3.9.1/test/test03/: main.cpp
nlohmannjson-3.9.1/test/test04/: main.cpp  test_input.json
nlohmannjson-3.9.1/test/test05/: CMakeLists.txt  JsonStruct.h  main.cpp  test_input.json
